# Rapid-Inbox

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  constraints-dev.txt  pyproject.toml  quickstart.sh  rapid_inbox_design_spec.md  sqlite_schema.sql
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
app/: __init__.py  config.py  http_runner.py  main.py  runtime.py  smtp_runner.py
app/auth/: api_keys.py  permissions.py  sessions.py
app/db/: __init__.py  connection.py  writer.py
app/http/: __init__.py  admin_api.py  admin_views.py  public_api.py  public_views.py  sse.py  template_helpers.py
app/ingest/: __init__.py  parser.py  queue.py  recovery.py  storage.py
app/services/: __init__.py  attachments.py  audit.py  dns_check.py  domains.py  mailboxes.py  messages.py  settings.py  verification_code.py
app/smtp/: __init__.py  handler.py  live_state.py  matcher.py  server.py
app/templates/admin/: api_key_detail.html  api_keys.html  audit.html  base.html  dashboard.html  domain_detail.html  domains.html  live.html  login.html  mailboxes.html  messages.html  settings.html
app/templates/public/: base.html  home.html  html_frame.html  mailbox.html  message.html
cpp/ingestd/: CMakeLists.txt  README.md
cpp/ingestd/src/: batch_writer.cpp  domain_cache.cpp  domain_cache.h  main.cpp  mime_parser.cpp  mime_parser.h  parsed_mail.h  smtp_server.cpp  smtp_server.h  smtp_session.cpp  smtp_session.h  verification_code.cpp  verification_code.h
cpp/ingestd/tests/: test_batch_writer.cpp  test_domain_cache.cpp  test_main.cpp  test_mime_parser.cpp  test_smtp_session.cpp  test_verification_code.cpp
docs/superpowers/plans/: 2026-04-18-rapid-inbox-phase-1.md  2026-04-18-rapid-inbox-v1.md  2026-04-19-mailbox-verification-code.md  (+2 more)
tests/: conftest.py  test_admin_api.py  test_admin_permissions.py  test_admin_views.py  test_config.py  test_cpp_ingestd_integration.py  test_dns_check.py  test_domain_matching.py  test_fixtures.py  test_ingest_pipeline.py  test_live_sse.py  test_public_downloads.py  test_public_routes.py  test_quickstart_script.py  test_recovery.py  test_retention.py  test_smtp_handler.py  test_template_helpers.py  test_verification_code.py
tools/: send_test_mail.py
(+2 files in other folders)
